// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`userdel command userdel fails if no flags are set 1`] = `
"The following errors occurred:
  [2mMissing required flag githubUsers[22m
[2m  Missing required flag organization[22m
[2m  Missing required flag repositories[22m
See more help with --help"
`;

exports[`userdel command userdel fails if only repo flags are set 1`] = `
"The following errors occurred:
  [2mMissing required flag githubUsers[22m
[2m  Missing required flag organization[22m
See more help with --help"
`;

exports[`userdel command userdel fails if only repo,org flags are set 1`] = `
"The following error occurred:
  [2mMissing required flag githubUsers[22m
See more help with --help"
`;
